--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,4 @@
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   max-width: 1280px;
   width: 80%;
   margin: 0 auto;
@@ -14,15 +7,14 @@
           align-items: center;
 }
 .container .displayPokemon {
+  width: 50%;
+  min-width: 250px;
+  margin: 0 auto;
   border: 2px orange solid;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
-.container .displayPokemon div {
-  border: 2px red solid;
-  width: 33.3333333333%;
+.container .displayPokemon img {
+  width: 100%;
 }
