--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -1,55 +1,58 @@
-.container{
-    // display:flex;
-    // // flex-direction:column;
-    max-width:1280px;
-    width:80%;
-    margin:0 auto;
-    align-items:center;
+.container {
+  // display:flex;
+  // // flex-direction:column;
+  max-width: 1280px;
+  width: 80%;
+  margin: 0 auto;
+  align-items: center;
 
-    .displayPokemon{
-        width:70%;
-        min-width:250px;
-        max-width:1280px;
-        margin:0 auto;
-        // border:2px orange solid;
-        display:grid;
-        gap:10px;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        list-style:none;
-        padding:0;
-        
-        li{
-            position: relative;
-            width:100%;
-            height:100%;
-            // padding:20px;
-        }
+  .displayPokemon {
+    width: 70%;
+    min-width: 250px;
+    max-width: 1280px;
+    margin: 0 auto;
+    // border:2px orange solid;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    list-style: none;
+    padding: 0;
 
-        .back{
-            width:100%;
-            height:100%;
-            position:absolute;
-            border:2px red solid;
-            top:0;
-
-            img{
-                margin-top:20px;
-            }
-
-        }
-
-        .front{
-            position:relative;
-            border:2px orange solid;
-            z-index:100;
-        }
-        img{
-            width:100%;
-        }
+    li {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      // padding:20px;
     }
-    
 
+    .back {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      border: 2px red solid;
+      top: 0;
 
+      img {
+        margin-top: 20px;
+      }
+    }
+
+    .front {
+      position: relative;
+      border: 2px orange solid;
+      z-index: 100;
+    }
+    img {
+      width: 100%;
+    }
+  }
 }
 
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
