--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -1,10 +1,19 @@
+body{
+  background-image:url('../assets/background.png');
+  background-size:cover;
+  margin:0;
+}
+
 .container {
-  // display:flex;
-  // // flex-direction:column;
+  display:flex;
+  flex-direction:column;
   max-width: 1280px;
   width: 80%;
   margin: 0 auto;
   align-items: center;
+  padding:50px 0;
+  background-color:rgba($color:white,$alpha:0.5);
+  border-radius:40px;
 
   .displayPokemon {
     width: 70%;
@@ -26,22 +35,35 @@
       // padding:20px;
     }
 
+    // pokemon images themselves
     .back {
       width: 100%;
       height: 100%;
       position: absolute;
-      border: 2px red solid;
       top: 0;
+
+      &:active{
+        animation:flip 0.5s linear 5s infinite;
+      }
 
       img {
         margin-top: 20px;
       }
     }
 
+    // back of pokemon cards
     .front {
       position: relative;
-      border: 2px orange solid;
-      z-index: 100;
+      z-index:100;
+      // transform:translateY(0);
+      
+      &:hover{
+        animation:bounce 1s infinite;
+      }
+      &:active{
+        animation:flip 0.5s linear 5s infinite;
+
+      }
     }
     img {
       width: 100%;
@@ -55,4 +77,21 @@
 
 .show {
   display: block;
+}
+
+// flip animation
+@keyframes flip{
+
+    from{
+        transform: rotateY(180deg);
+        opacity:0;
+    }
+}
+
+// bounce animation
+
+@keyframes bounce{
+  0%{transform:translateY(0px)}
+  50%{transform:translateY(-20px)}
+  100%{transform:translateY(0px)}
 }
