--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -1,7 +1,10 @@
 body {
   background-image: url("../assets/background.png");
   background-size: cover;
+  background-repeat:no-repeat;
+  background-position:center;
   margin: 0;
+  height:95vh;
 }
 
 .container {
@@ -68,6 +71,14 @@ body {
       width: 100%;
     }
   }
+}
+
+h2{
+  font-family:$poppins;
+}
+
+p{  
+  font-family:$poppins;
 }
 
 .message{
