added background-colors for img

--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -44,7 +44,7 @@ body {
       height: 100%;
       position: absolute;
       top: 0;
-      background-color:white;
+  
 
       &:active {
         animation: flip 0.5s linear 5s infinite;
@@ -52,6 +52,8 @@ body {
 
       img {
         margin-top: 20px;
+        background-color:bisque;
+        border-radius:50%;
       }
     }
 
