fixed issue of not being able to click if you click same image twice: display:none instead of opacity

--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -6,3 +6,9 @@ $poppins:'Poppins',sans-serif;
 html{
     font-size:125%;
 }
+
+.wrapper{
+    max-width:1280px;
+    width:80%;
+    margin:0 auto;
+}
