--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -7,9 +7,21 @@ body {
   height:95vh;
 }
 
+main{
+  display:flex;
+  flex-direction:column;
+}
+
+.scoreBoard{
+  .wrapper{
+    width:70%;
+  }
+
+}
 .container {
   display: flex;
   flex-direction: column;
+  min-height:max-content;
   max-width: 1280px;
   width: 80%;
   margin: 0 auto;
@@ -17,9 +29,12 @@ body {
   padding: 50px 0;
   background-color: rgba($color: white, $alpha: 0.5);
   border-radius: 40px;
+  border:2px orange solid;
 
   .displayPokemon {
+    border:2px red solid;
     width: 70%;
+    height:max-content;
     min-width: 250px;
     max-width: 1280px;
     margin: 0 auto;
@@ -44,7 +59,6 @@ body {
       height: 100%;
       position: absolute;
       top: 0;
-  
 
       &:active {
         animation: flip 0.5s linear 5s infinite;
@@ -77,6 +91,7 @@ body {
 }
 
 h2{
+  margin:0;
   font-family:$poppins;
 }
 
@@ -92,7 +107,7 @@ p{
 }
 
 .hide {
-  opacity: 0;
+  display:none;
 }
 
 // flip animation
