--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -78,6 +78,7 @@ body {
 
 h2{
   font-family:$poppins;
+  margin:0;
 }
 
 p{  
@@ -92,7 +93,7 @@ p{
 }
 
 .hide {
-  opacity: 0;
+  display:none;
 }
 
 // flip animation
