--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,6 +84,7 @@ body {
 
 h2 {
   font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 
 p {
@@ -99,7 +100,7 @@ p {
 }
 
 .hide {
-  opacity: 0;
+  display: none;
 }
 
 @-webkit-keyframes flip {
