--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,6 +56,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 .container .displayPokemon .back {
   width: 100%;
