--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -1,8 +1,9 @@
-// FONT 
+// FONT
 
-$pixelFont:'VT323', monospace;
-$poppins:'Poppins',sans-serif;
+$pixelFont: "VT323", monospace;
+$poppins: "Poppins", sans-serif;
+$pokemonGB: "Pokemon GB";
 
-html{
-    font-size:125%;
+html {
+  font-size: 125%;
 }
