--- a/styles/sass/partials/styles.scss
+++ b/styles/sass/partials/styles.scss
@@ -1,4 +1,5 @@
-@import './variables';
-@import './header';
-@import './gameBoard';
-@import './footer';
+@import "./typography";
+@import "./variables";
+@import "./header";
+@import "./gameBoard";
+@import "./footer";
