--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,7 +68,7 @@ main {
   background-clip: padding-box;
 }
 .container .displayPokemon {
-  width: 70%;
+  width: 50%;
   min-width: 250px;
   max-width: 1280px;
   margin: 0 auto;
@@ -130,12 +130,14 @@ p {
 }
 
 .flipped {
-  -webkit-animation: flip 1s linear;
-          animation: flip 1s linear;
+  -webkit-animation: flip 0.5s linear;
+          animation: flip 0.5s linear;
 }
 
 .hide {
   opacity: 0;
+  -webkit-animation: disappear 0.4s, flip 1s;
+          animation: disappear 0.4s, flip 1s;
 }
 
 .button {
@@ -163,6 +165,29 @@ p {
           box-shadow: 1em 0em 0 #181010, 2em 0em 0 #181010, 1em 1em 0 #181010, 2em 1em 0 #181010, 3em 1em 0 #181010, 1em 2em 0 #181010, 2em 2em 0 #181010, 3em 2em 0 #181010, 4em 2em 0 #181010, 1em 3em 0 #181010, 2em 3em 0 #181010, 3em 3em 0 #181010, 4em 3em 0 #181010, 5em 3em 0 #181010, 1em 4em 0 #181010, 2em 4em 0 #181010, 3em 4em 0 #181010, 4em 4em 0 #181010, 1em 5em 0 #181010, 2em 5em 0 #181010, 3em 5em 0 #181010, 1em 6em 0 #181010, 2em 6em 0 #181010;
 }
 
+@-webkit-keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 @-webkit-keyframes flip {
   from {
     -webkit-transform: rotateY(180deg);
@@ -170,7 +195,6 @@ p {
     opacity: 0;
   }
 }
-
 @keyframes flip {
   from {
     -webkit-transform: rotateY(180deg);
