--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,7 +71,7 @@ main {
   width: 50%;
   min-width: 250px;
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(5, 1fr);
@@ -113,8 +113,8 @@ main {
 }
 
 h2 {
-  font-family: "Poppins", sans-serif;
-  margin: 10px 0 0 0;
+  font-family: "Pokemon GB";
+  font-size: 1rem;
 }
 
 p {
@@ -122,7 +122,7 @@ p {
 }
 
 .message {
-  visibility: hidden;
+  visibility: visible;
 }
 
 .appear {
