--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,5 +1,5 @@
-h1{
-    font-family:$pixelFont;
-    text-align:center;
+h1 {
+  font-family: $pokemonGB;
+  text-align: center;
+  font-size: 1.6rem;
 }
-
