--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -43,6 +43,7 @@ main {
   border-width: 21px;
   border-style: solid;
   background-clip: padding-box;
+  position: relative;
 
   .displayPokemon {
     width: 50%;
@@ -107,7 +108,7 @@ p {
 }
 
 .message {
-  visibility: visible;
+  visibility: hidden;
 }
 .appear {
   visibility: visible;
@@ -150,6 +151,20 @@ p {
       2em 4em 0 #181010, 3em 4em 0 #181010, 4em 4em 0 #181010, 1em 5em 0 #181010,
       2em 5em 0 #181010, 3em 5em 0 #181010, 1em 6em 0 #181010, 2em 6em 0 #181010;
   }
+}
+
+.startGame {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #48a058;
+  z-index: 200;
 }
 
 // disappear animation
