--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -3,6 +3,7 @@
 $pixelFont: "VT323", monospace;
 $poppins: "Poppins", sans-serif;
 $pokemonGB: "Pokemon GB";
+$blue:#536fe1;
 
 html {
   font-size: 125%;
