--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -14,7 +14,8 @@ main {
 .scoreBoard {
   display: flex;
   padding-left: 20px;
-  background-color: #48a058;
+  justify-content:space-evenly;
+  background-color: $blue;
   color: #f8f3f8;
   text-shadow: -1px -1px 0 #181010, 1px -1px 0 #181010, -1px 1px 0 #181010,
     1px 1px 0 #181010;
@@ -34,9 +35,10 @@ main {
   flex-direction: column;
   max-width: 1280px;
   width: 80%;
+  max-height:50vh;
   margin: 0 auto;
   align-items: center;
-  padding: 50px 0;
+  padding: 0 0 20px;
   background-color: rgba($color: #f8f3f8, $alpha: 0.5);
   // border-radius: 40px;
   border-image: url("../assets/frame.png") 42 round;
@@ -47,18 +49,21 @@ main {
 
   .displayPokemon {
     width: 50%;
+    border:2px red solid;
     min-width: 250px;
     max-width: 1280px;
-    margin: 0 auto 20px;
+    max-height:50%;
+    margin: 10px auto 0px;
     // border:2px orange solid;
     display: grid;
     gap: 10px;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(5, 25%);
+    grid-template-rows: repeat(2, 50%);
     list-style: none;
     padding: 0;
 
     li {
+      border:2px blue solid;
       position: relative;
       width: 100%;
       height: 100%;
@@ -69,12 +74,12 @@ main {
     // pokemon images themselves
     .back {
       width: 100%;
-      height: 100%;
+      height: 100px;
       position: absolute;
       top: 0;
 
       img {
-        margin-top: 20px;
+        margin:auto;
         background-color: bisque;
         border-radius: 50%;
       }
@@ -98,14 +103,7 @@ main {
   }
 }
 
-h2 {
-  font-family: $pokemonGB;
-  font-size: 1rem;
-}
 
-p {
-  font-family: $pokemonGB;
-}
 
 .message {
   visibility: hidden;
@@ -158,12 +156,11 @@ p {
   width: 100%;
   height: 100%;
   top: 0;
-  border: 1px solid red;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #48a058;
+  background-color: rgba($color: #f8f3f8, $alpha: 0);
   z-index: 200;
 }
 
@@ -205,13 +202,15 @@ p {
 // bounce animation
 
 @keyframes bounce {
-  0% {
-    transform: translateY(0px);
-  }
-  50% {
-    transform: translateY(-20px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
