--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -36,6 +36,7 @@ main {
   max-width: 1280px;
   width: 80%;
   max-height:50vh;
+  min-height:30vh;
   margin: 0 auto;
   align-items: center;
   padding: 0 0 20px;
