--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,6 +77,7 @@ main {
   max-width: 1280px;
   width: 80%;
   max-height: 50vh;
+  min-height: 30vh;
   margin: 0 auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -367,6 +368,7 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: fixed;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -378,9 +380,4 @@ footer p {
   font-weight: bold;
   margin: 0;
   padding: 10px 0;
-}
-@media (max-width: 1450px) {
-  footer {
-    position: fixed;
-  }
 }
