--- a/styles/sass/partials/_gameBoard.scss
+++ b/styles/sass/partials/_gameBoard.scss
@@ -24,6 +24,7 @@ main {
   border-style: solid;
   text-shadow: -1px -1px 0 #181010, 1px -1px 0 #181010, -1px 1px 0 #181010,
     1px 1px 0 #181010;
+
 }
 
 .wrapper {
@@ -31,6 +32,9 @@ main {
   width: 50%;
   margin: 0 auto;
 
+  @media (max-width:1000px){
+    width:90%;
+  }
 }
 
 .container {
@@ -143,7 +147,7 @@ main {
   cursor: pointer;
   margin-top: 20px;
 
-  &:hover::before {
+  &:hover::before, &:focus::before {
     content: "";
     position: absolute;
     top: 0;
@@ -191,8 +195,53 @@ main {
     
   }
 
+  input{
+    visibility:hidden;
+
+    &:focus + label{
+      color:red;
+    }
+  }
+
   input, label{
     cursor: pointer;
+    position: relative;
+  }
+  input[type=radio]:checked + label{
+    color:$blue;
+  }
+  input[type=radio]:checked + label:before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -20px;
+    width: 2px;
+    height: 2px;
+    font-size: 2px;
+    box-shadow: 1em 0em 0 #181010, 2em 0em 0 #181010, 1em 1em 0 #181010,
+      2em 1em 0 #181010, 3em 1em 0 #181010, 1em 2em 0 #181010, 2em 2em 0 #181010,
+      3em 2em 0 #181010, 4em 2em 0 #181010, 1em 3em 0 #181010, 2em 3em 0 #181010,
+      3em 3em 0 #181010, 4em 3em 0 #181010, 5em 3em 0 #181010, 1em 4em 0 #181010,
+      2em 4em 0 #181010, 3em 4em 0 #181010, 4em 4em 0 #181010, 1em 5em 0 #181010,
+      2em 5em 0 #181010, 3em 5em 0 #181010, 1em 6em 0 #181010, 2em 6em 0 #181010;
+  }
+  label{
+    &:hover::before, &:focus::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: -20px;
+      width: 2px;
+      height: 2px;
+      font-size: 2px;
+      color: #181010;
+      box-shadow: 1em 0em 0 #181010, 2em 0em 0 #181010, 1em 1em 0 #181010,
+        2em 1em 0 #181010, 3em 1em 0 #181010, 1em 2em 0 #181010, 2em 2em 0 #181010,
+        3em 2em 0 #181010, 4em 2em 0 #181010, 1em 3em 0 #181010, 2em 3em 0 #181010,
+        3em 3em 0 #181010, 4em 3em 0 #181010, 5em 3em 0 #181010, 1em 4em 0 #181010,
+        2em 4em 0 #181010, 3em 4em 0 #181010, 4em 4em 0 #181010, 1em 5em 0 #181010,
+        2em 5em 0 #181010, 3em 5em 0 #181010, 1em 6em 0 #181010, 2em 6em 0 #181010;
+    }
   }
 
   .startButton{
@@ -208,6 +257,10 @@ main {
 
     &:hover, &:focus{
       background-color:rgba($color:black,$alpha:0.5);
+    }
+
+    @media (max-width:500px){
+      width:90%;
     }
   }
 }
