--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -15,8 +15,22 @@ h2 {
 
 p {
   font-family: $pokemonGB;
+  @media (max-width:500px){
+    font-size:0.8rem;
+    margin:10px;
+  }
 }
 
 h3{
   font-family: $pokemonGB;
+  @media (max-width:500px){
+    font-size:0.8rem;
+  }
 }
+
+.difficultyLabel, .tileSelection{
+  @media (max-width:500px){
+    font-size:0.8rem;
+  }
+}
+
